Project

General

Profile

Actions

Bug #15300

closed

rb_frame_method_id_and_class deprecated in 2.6

Bug #15300: rb_frame_method_id_and_class deprecated in 2.6

Added by paddor (Patrik Wenger) almost 8 years ago. Updated over 7 years ago.

Status:
Closed
Target version:
-
ruby -v:
ruby 2.6.0preview3 (2018-11-06 trunk 65578) [x86_64-linux]
[ruby-core:89782]

Description

Coming from jasonroelofs/rice#105, related to #14192.

As far as I understand, this API has been deprecated, thus Rice won't compile anymore.

detail/method_data.cpp:19:48: error: ‘int rb_frame_method_id_and_class(ID*, VALUE*)’ is deprecated [-Werror=deprecated-declarations]
   if (!rb_frame_method_id_and_class(&id, &klass))
                                                ^
In file included from /home/p/.rubies/ruby-2.6.0-preview3/include/ruby-2.6.0/ruby/ruby.h:24:0,
                 from /home/p/.rubies/ruby-2.6.0-preview3/include/ruby-2.6.0/ruby.h:33,
                 from detail/ruby.hpp:19,
                 from detail/method_data.hpp:4,
                 from detail/method_data.cpp:1:
/home/p/.rubies/ruby-2.6.0-preview3/include/ruby-2.6.0/ruby/backward.h:53:16: note: declared here
 DEPRECATED(int rb_frame_method_id_and_class(ID *idp, VALUE *klassp));

Back in December 2017, there was no replacement API fixed yet.
@ko1 (Koichi Sasada), are there any updates to this?

Actions

Also available in: PDF Atom