include/ruby/backward.h
@@ -49,9 +49,6 @@ DECLARE_DEPRECATED_INTERNAL_FEATURE(rb_struct_ptr);
 DECLARE_DEPRECATED_INTERNAL_FEATURE(rb_generic_ivar_table);
 NORETURN(ERRORFUNC(("internal function"), VALUE rb_mod_const_missing(VALUE, VALUE)));
 
-/* vm.c */
-DEPRECATED(int rb_frame_method_id_and_class(ID *idp, VALUE *klassp));
-
 /* from version.c */
 #ifndef RUBY_SHOW_COPYRIGHT_TO_DIE
 # define RUBY_SHOW_COPYRIGHT_TO_DIE 1
